--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 flask
 flask-cors
-pillow
-numpy
 onnxruntime
-gunicorn
-pytesseract
-opencv-python-headless
-python-dotenv
+numpy
+pillow
 openai
+torch
+transformers
+requests
